@@ -1,3 +1,8 @@
+2002-05-15  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
+
+	* 17166: Src/Modules/zftp.c: must check fileno of zftp control
+	connection before it's closed.
+
 2002-05-15  Sven Wischnowsky  <wischnow@zsh.org>
 
 	* 17163: Src/Zle/compcore.c: follow-up to 17135,
